--- a/gyakorlaszhra/wwwroot/index.html
+++ b/gyakorlaszhra/wwwroot/index.html
@@ -48,7 +48,7 @@
 
 
     <!-- GOMB AZ ADAT BETÖLTÉSHEZ-->
-    <p><button id="megjelenítőGomb">Összes könyv megjelenítése</button></p>
+    <!--<p><button id="megjelenítőGomb">Összes könyv megjelenítése</button></p>-->
 
 
     <h1>Könyvek</h1> <!-- Első sorban ez jelenk meg -->
@@ -123,7 +123,7 @@
                     if (v.ok) {
                         alert("A könyv sikeresen törölve!");
                         // Frissítsd a táblázatot, ha szükséges
-                        document.getElementById("megjelenítőGomb").click();
+                       /* document.getElementById("megjelenítőGomb").click();*/
                     } else {
                         alert("Hiba történt a könyv törlése során!");
                     }
@@ -133,7 +133,7 @@
 
 
         //Itt csináljuk a gombos részt amikor megjelenítjük
-        document.getElementById("megjelenítőGomb").addEventListener("click", _ => {
+        //document.getElementById("megjelenítőGomb").addEventListener("click", _ => {
             //Adatok megjelenítése
             fetch("api/Book")
                 .then((v) => v.json())
@@ -157,8 +157,8 @@
                         tbody.appendChild(tr); // Hozzáadjuk az új sort a táblázat testéhez
                     });
                 })
-        }
-        )
+        //}
+        //)
 
     </script>
 </body>
